# rag-mistral

./: .env.example  .gitignore  README.md  demo_app.py  financial_analyst_rag.ipynb  pyproject.toml  requirements.txt  risk_rag.ipynb
.streamlit/: config.toml
faiss_index/: chunks.pkl
