[project]
name = "mistral-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "mistralai>=1.9.3",
    "pymupdf>=1.26.3",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
]
